Changing appearance of main ui